--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.5.11",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.1"
+    "passport-local-mongoose": "^5.0.1",
+    "semantic-ui": "^2.4.2"
   }
 }
